[package]
name = "stegano-gram"
version = "0.1.0"
authors = ["Emma Junger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
crc = "3.0.0"

[[bin]]
name = "stg"
path = "src/main.rs"
